# llm-evals

./: .env.example  .gitignore  CLI_README.md  Pipfile  README.md  app.py  fhtml.py  pyproject.toml  pyproject.toml.tmp  streamlit_app.py
.cursor/rules/: environment-info.mdc
chess_data/games/: skill_5_game_1.pgn
evals/: __main__.py  cli.py  core.py  math.py  registry.py  tictactoe.py  types.py
evals/chess/: README.md  generate_games.py  grader.py
evals/chess/games/: skill_10.pgn  skill_15.pgn  skill_18.pgn  skill_20.pgn  skill_5.pgn
evals/evals/: math.py  tictactoe.py
evals/util/: db.py  env.py  llm.py
llm_evals/: core.py  db.py  env.py  eval.py  llm.py  math.py  types.py
llm_maths/: db.py  env.py  eval.py  llm.py  system_prompt.py  types.py
tests/: test_evals.py
webapp/: package.json  pnpm-lock.yaml
webapp/src/components/: Nav.tsx
webapp/src/lib/: db.d.ts  db.ts  env.ts
webapp/src/routes/: index.tsx
