[tool.poetry]
name = "evals"
version = "0.1.0"
description = ""
authors = ["George Prichard <dgmprichard@gmail.com>"]
readme = "README.md"
packages = [{ include = "evals" }]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.10.1"
pydantic-settings = "^2.6.1"
pytest = "^8.3.3"
pandas = "^2.2.3"
peewee = "^3.17.8"
psycopg2-binary = "^2.9.10"
tabulate = "^0.9.0"
tqdm = "^4.67.1"
easyai = "^2.0.12"
python-fasthtml = "^0.12.4"

# Dev dependencies
[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
black = "^24.1.0"
ruff = "^0.1.1"
litellm = "^1.52.14"
pyright = "^1.1.389"
fire = "^0.7.0"
google-generativeai = "^0.8.3"
ollama = "^0.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
include = ["evals"]
