[project]
name = "evals"
version = "0.1.0"
description = ""
authors = [{ name = "George Prichard", email = "dgmprichard@gmail.com" }]
requires-python = "~=3.12"
readme = "README.md"
dependencies = [
    "pydantic>=2.10.1,<3",
    "pydantic-settings>=2.6.1,<3",
    "pytest>=8.3.3,<9",
    "pandas>=2.2.3,<3",
    "peewee>=3.17.8,<4",
    "psycopg2-binary>=2.9.10,<3",
    "tabulate>=0.9.0,<0.10",
    "tqdm>=4.67.1,<5",
    "easyai>=2.0.12,<3",
    "python-fasthtml>=0.12.4,<0.13",
    "plotly>=6.0.0,<7",
    "openai>=1.0.0,<2",
    "ruff>=0.1.15",
    "pyrefly>=0.16.3",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5,<7",
    "black>=24.1.0,<25",
    "ruff>=0.1.1,<0.2",
    "pyright>=1.1.389,<2",
    "fire>=0.7.0,<0.8",
    "google-generativeai>=0.8.3,<0.9",
    "ollama>=0.4.1,<0.5",
]

[tool.hatch.build.targets.sdist]
include = ["evals"]

[tool.hatch.build.targets.wheel]
include = ["evals"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
include = ["evals"]


[tool.ruff.lint]
extend-select = ["I"]

[tool.pyrefly]
search_path = ["evals"]
